--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-/*
-  Google HTML5 slides template
+﻿/*
+  Google HTML5 slides 
 
   Authors: Luke Mahé (code)
            Marcin Wichary (code and design)
@@ -15,6 +15,9 @@
 html {
   height: 100%;
 }
+
+
+
 
 body {
   margin: 0;
